updated configs, bootstrap errors, product controller (only export opt-in products)